base/insurance-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insurance-app-deployment
  labels:
    app: insurance-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insurance-app
  template:
    metadata:
      labels:
        app: insurance-app
    spec:
      # Pridané: Povolenie na sťahovanie z GitHub Container Registry
      imagePullSecrets:
        - name: ghcr-login-secret
      
      # Affinity zmenené na "preferred", aby to na jednom uzle neblokovalo štart
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: insurance-app
              topologyKey: "kubernetes.io/hostname"

      containers:
      - name: insurance-app-container
        # Opravené: Správna cesta k tvojmu obrazu
        image: ghcr.io/gloziksoft/git_ops-k8-config/insurance-app:latest
        ports:
        - containerPort: 8080
        
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "192Mi"
            cpu: "500m"
