base/insurance-app/mariadb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-insurance-app
  labels:
    app: mariadb
    tier: database

spec:
  serviceName: mariadb-service
  replicas: 1

  selector:
    matchLabels:
      app: mariadb

  template:
    metadata:
      labels:
        app: mariadb
        tier: database

    spec:
      containers:
        - name: mariadb-container
          image: mariadb:10.11

          ports:
            - containerPort: 3306
              name: mariadb

          volumeMounts:
            # 📦 PERSISTENTNÉ DÁTA
            - name: mariadb-volume
              mountPath: /var/lib/mysql

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

  volumeClaimTemplates:
    - metadata:
        name: mariadb-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "local-path"
        resources:
          requests:
            storage: 5Gi
