base/insurance-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: insurance-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: insurance.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: insurance-app-service
                port:
                  number: 80
